Switch terrain types to strings
Also, combine them where they're visually the same, and ensure names
make sense.
