# Game.Domain/Terrain/VisualTerrainType.cs
@@ -6,18 +6,15 @@ namespace Game.Domain.Terrain
 {
     public enum VisualTerrainType
     {
-        Permafrost,
-        Tundra,
-        ColdParklands,
+        Snow,
+        SnowWithGrass,
+        SnowWithBushes,
+        SnowWithConiferousForests,
+        Grassland,
+        Bushes,
         ConiferousForests,
-        CoolDeserts,
-        Steppes,
-        MixedForests,
         HotDeserts,
-        Chaparral,
         DeciduousForests,
-        Savanna,
-        TropicalSeasonalForests,
         TropicalRainForests,
         ShallowWater,
         DeepWater,
